--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,9 +11,9 @@
     <meta property="og:title" content="ETH Gas.watch">
     <meta name="description" content="An reliable Ethereum gas price feed, with email alerts for when the price drops." />
     <meta property="og:description" content="An reliable Ethereum gas price feed, with email alerts for when the price drops.">
-    <link rel="icon" href="https://ethgas.watch/fuel.png">
-    <meta property="og:image" content="https://ethgas.watch/fuel.png">
-    <meta property="og:url" content="https://ethgas.watch/">
+    <link rel="icon" href="https://ywei.io/fuel.png">
+    <meta property="og:image" content="https://ywei.io/fuel.png">
+    <meta property="og:url" content="https://ywei.io/">
     <meta property=”og:type” content=”website” />
     <meta name="twitter:card" content="summary">
   </head>
