--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,8 +7,8 @@
     <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101273918);</script>
     <script async src="//static.getclicky.com/js"></script>
 
-    <title>ETH Gas.watch</title>
-    <meta property="og:title" content="ETH Gas.watch">
+    <title>manifold.finance</title>
+    <meta property="og:title" content="manifold.finance">
     <meta name="description" content="An reliable Ethereum gas price feed, with email alerts for when the price drops." />
     <meta property="og:description" content="An reliable Ethereum gas price feed, with email alerts for when the price drops.">
     <link rel="icon" href="https://ywei.io/fuel.png">
